--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "netflix-react-js",
   "version": "0.1.0",
-  "homepage": "https://fireclint.github.io/netflix-react-tailwind/",
+  "homepage": "https://netflix-clone-flame-three.vercel.app/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
+    "firebase-tools": "^11.16.1",
     "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24"
   }
