--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "netflix-react-js",
+  "name": "netflix-clone-react",
   "version": "0.1.0",
   "homepage": "https://netflix-clone-flame-three.vercel.app/",
   "private": true,
